--- a/WebParts/ZNet_BrandingToolkit/src/webparts/addJsCssReference/AddJsCssReferenceWebPart.manifest.json
+++ b/WebParts/ZNet_BrandingToolkit/src/webparts/addJsCssReference/AddJsCssReferenceWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
   "id": "9fa13c84-2736-4413-be49-e163b796b143",
-  "alias": "AddJsCssReferenceWebPart",
+  "alias": "ZNetCssJSReference",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
