--- a/WebParts/ZNet_SocialTabs/package.json
+++ b/WebParts/ZNet_SocialTabs/package.json
@@ -29,6 +29,7 @@
     "office-ui-fabric-react": "5.131.0",
     "react": "16.8.5",
     "react-dom": "16.8.5",
+    "react-instagram-embed": "^1.5.0",
     "react-twitter-embed": "^2.0.4"
   },
   "resolutions": {
