--- a/WebParts/ZNet_SocialTabs/tsconfig.json
+++ b/WebParts/ZNet_SocialTabs/tsconfig.json
@@ -30,7 +30,7 @@
     ]
   },
   "include": [
-    "src/**/*.ts", "src/webparts/twitterFeed/components/IZNetInstagram.tsx"
+    "src/**/*.ts", "src/webparts/twitterFeed/components/IZNetInstagram.tsx", "src/webparts/twitterFeed/components/IZNetInstagramFeedPosts.tsx"
   ],
   "exclude": [
     "node_modules",
